k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aihost-api-mvp
  namespace: aihost-mvp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aihost-api
  template:
    metadata:
      labels:
        app: aihost-api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: myapi
          image: ghcr.io/lukaszkosicki/aihost_api_mvp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
